tree-sitter-poste-json/test/corpus/json_vars.txt
JSON with {{var}} references
===============================================================================

{
  "id": {{user_id}},
  "role": "{{role}}",
  "name": "{{default_name}}"
}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (variable))
    (member
      (key (string))
      (string))
    (member
      (key (string))
      (string))))


================================================================================
Simple object
===============================================================================

{"key": "value", "num": 42}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (string))
    (member
      (key (string))
      (number))))


================================================================================
Array with variable
===============================================================================

[1, {{var}}, "three"]

-------------------------------------------------------------------------------

(document
  (array
    (number)
    (variable)
    (string)))


================================================================================
Nested object with variable
===============================================================================

{"outer": {"inner": {{deep_var}}}}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (object
        (member
          (key (string))
          (variable))))))


================================================================================
Variable as only value
===============================================================================

{{standalone_var}}

-------------------------------------------------------------------------------

(document
  (variable))


================================================================================
Complex JSON with booleans and null
===============================================================================

{"active": true, "data": null, "count": 0.5}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (boolean))
    (member
      (key (string))
      (null))
    (member
      (key (string))
      (number))))


================================================================================
Variable with jq filter inside
===============================================================================

{"items": {{jq.response.body | {name: .[].author.name} }}}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (variable))))


================================================================================
Trailing comma
===============================================================================

{"a": 1, "b": 2,}

-------------------------------------------------------------------------------

(document
  (object
    (member
      (key (string))
      (number))
    (member
      (key (string))
      (number))))


================================================================================
Comments
===============================================================================

# this is a comment
{"key": "value"}

-------------------------------------------------------------------------------

(document
  (comment)
  (object
    (member
      (key (string))
      (string))))